--- a/pages/details/details.wxss
+++ b/pages/details/details.wxss
@@ -1,47 +1,59 @@
 /* pages/details/details.wxss */
 /* detail.wxss */
-.container {
-  padding: 20rpx;
-}
 
-.cover {
-  width: 100%;
-  height: 300rpx;
-  border-radius: 10rpx;
-}
-
-.title {
-  font-size: 24rpx;
-  font-weight: bold;
-  margin-top: 20rpx;
-}
-
-.author {
-  font-size: 16rpx;
-  color: #888;
-  margin-top: 10rpx;
-}
-
-.description {
-  font-size: 18rpx;
-  margin-top: 20rpx;
-}
 swiper {
-  height: 400rpx;
+  height: 67.7%;
 }
-
-swiper-item view {
+.swiper-image{
+  width: 100%;
   height: 100%;
 }
 
-.red {
-  background-color: Pink;
+.user-head{
+  display: flex;
+  align-items: center;
+  padding: 20rpx;
+  font-weight: bold;
+  font-size: 14px;
 }
 
-.green {
-  background-color: PaleGreen;
+.user-head image{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 6px;
 }
+.swiper-container {
+  height: 100vh; /* 使用 calc() 函数计算高度 */
+}
+.time_location{
+  margin-left: 10px;
+  font-weight: 300;
+  font-size: 10px;
+  color:#808080
+}
+.notes{
+  display: flex;
+  flex-direction: column;
+}
+.user-title{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 20px;
+  margin: 10px 0 10px 10px;
 
-.blue {
-  background-color: SkyBlue;
+}
+.user-description {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  font-size: 12px;
+  margin-left: 10px;
+
 }
