完成所有基本功能

--- a/src/global.less
+++ b/src/global.less
@@ -9,6 +9,16 @@ body,
     'Noto Color Emoji';
 }
 
+.ant-pro-layout .ant-pro-layout-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  background-color: transparent;
+  position: relative;
+  padding-block: 0;
+  padding-inline: 0;
+}
+
 .colorWeak {
   filter: invert(80%);
 }
