--- a/pages/login/login.wxss
+++ b/pages/login/login.wxss
@@ -6,7 +6,7 @@
   display: block;
   position: absolute;
   width: 100%;
-  background-color: #AFBFE3;
+  background-color: #ffc0cb;
 }
 
 /* 白色区域 */
@@ -40,7 +40,7 @@
   content: "\e6b9";
   font-size: 100rpx;
   font-weight: lighter;
-  color: #4373D9;
+  color: #ffc0cb;
 }
 
 .userName {
@@ -73,7 +73,7 @@
   margin-right: 0;
   font-size: 30rpx;
   font-weight: bold;
-  color: rgba(67, 115, 217);
+  color: #ffc0cb;
 }
 
 /* 密码图标+输入框+小眼睛图标+下划线父容器view */
@@ -108,7 +108,7 @@
   margin-right: 0;
   font-size: 30rpx;
   font-weight: bold;
-  color: rgba(67, 115, 217);
+  color: #ffc0cb;
 }
 
 
@@ -123,16 +123,16 @@
 
 @keyframes button {
   0% {
-    background-color: rgba(67, 115, 217, .81);
+    background-color: rgba(255, 192, 203, .81);
   }
 
   50% {
-    background-color: rgba(67, 115, 217, 1);
+    background-color: rgba(255, 192, 203, 1);
     transform: scale(1.01);
   }
 
   100% {
-    background-color: rgba(67, 115, 217, .81);
+    background-color: rgba(255, 192, 203, .81);
   }
 }
 
@@ -147,7 +147,7 @@
   width: 100%;
   height: 100%;
   border-radius: 12rpx;
-  background-color: rgba(67, 115, 217, .8);
+  background-color: #ffc0cb;
   color: white;
 }
 
