--- a/pages/register/register.wxss
+++ b/pages/register/register.wxss
@@ -4,7 +4,7 @@
   display: block;
   position: absolute;
   width: 100%;
-  background-color:#AFBFE3;
+  background-color:#ffc0cb;
 }
 .v1 .v2 {
   position: relative;
@@ -33,7 +33,7 @@
   content: "\e62d";
   font-size: 100rpx;
   font-weight: lighter;
-  color: #AFBFE3;
+  color: #ffc0cb;
 }
 
 .userName {
@@ -64,7 +64,7 @@
   margin-right: 0;
   font-size: 30rpx;
   font-weight: bold;
-  color: rgba(67, 115, 217);
+  color: #ffc0cb;
 }
 .passWord {
   margin-top: 350rpx;
@@ -94,7 +94,7 @@
   margin-right: 0;
   font-size: 30rpx;
   font-weight: bold;
-  color: rgba(67, 115, 217);
+  color: #ffc0cb;
 }
 .Confir-passWord{
   margin-top: 500rpx;
@@ -150,7 +150,7 @@
   width: 100%;
   height: 100%;
   border-radius: 12rpx;
-  background-color: rgba(67, 115, 217, .8);
+  background-color: #ffc0cb;
   color: white;
 }
 
@@ -178,7 +178,7 @@
   display: block;
   position: absolute;
   width: 100%;
-  background-color:#AFBFE3;
+  background-color:#ffc0cb;
 }
 .v1 .v2 {
   position: relative;
@@ -238,7 +238,7 @@
   margin-right: 0;
   font-size: 30rpx;
   font-weight: bold;
-  color: rgba(67, 115, 217);
+  color: #ffc0cb;
 }
 .passWord {
   margin-top: 350rpx;
@@ -268,7 +268,7 @@
   margin-right: 0;
   font-size: 30rpx;
   font-weight: bold;
-  color: rgba(67, 115, 217);
+  color: #ffc0cb;
 }
 .Confir-passWord{
   margin-top: 500rpx;
@@ -300,16 +300,16 @@
 
 @keyframes button {
   0% {
-    background-color: rgba(67, 115, 217, .81);
+    background-color: rgba(255, 192, 203, .81);
   }
 
   50% {
-    background-color: rgba(67, 115, 217, 1);
+    background-color: rgba(255, 192, 203, 1);
     transform: scale(1.01);
   }
 
   100% {
-    background-color: rgba(67, 115, 217, .81);
+    background-color: rgba(255, 192, 203, .81);
   }
 }
 
@@ -324,7 +324,7 @@
   width: 100%;
   height: 100%;
   border-radius: 12rpx;
-  background-color: rgba(67, 115, 217, .8);
+  background-color: #ffc0cb;
   color: white;
 }
 
